--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://43.204.148.140:9980/vbs/repository/wallmart-releases/</url>
+	      <url>http://13.127.185.11:9980/vbs/repository/wallmart-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://43.204.148.140:9980/vbs/repository/walmart-snapshot/</url>
+	      <url>http:http://13.127.185.11:9980/vbs/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
