--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http:http://13.127.185.11:9980/vbs/repository/walmart-snapshot/</url>
+	      <url>http://13.127.185.11:9980/vbs/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
