--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>13.233.26.113:9000/</sonar.host.url>
+		<sonar.host.url>http://13.233.26.113:9000/</sonar.host.url>
                 <sonar.login>a98ee4e39c43fc316e59f80cd9208cd3484bc982</sonar.login>
 		
              
